--- a/babel.config.json
+++ b/babel.config.json
@@ -1,10 +1,11 @@
 {
-    "plugins": [
-        [
-            "@babel/plugin-transform-react-jsx",
-            {
-                "runtime": "classic"
-            }
-        ]
+  "plugins": [
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "runtime": "classic",
+        "pragma": "createElement"
+      }
     ]
+  ]
 }
